--- a/world.html
+++ b/world.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <title>CS290 Project</title>
-    <link rel="stylesheet" href="home.css" type="text/css">
+    <link rel="stylesheet" href="world.css" type="text/css">
 </head>
 <body>
     <!-- horizontal navigation menu -->
