--- a/us.html
+++ b/us.html
@@ -16,8 +16,8 @@
         <a href="world.html">World</a>
         <a href="resources.html">Additional Resources</a>
     </div>
-    <h1>COVID-19 Deaths by State and Demographic</h1>
-    <h3>Select</h3>
+    <h1>COVID-19 Deaths</h1>
+    <h3>Select by demographic</h3>
     <form>
         <fieldset>
             <label for="State">State:</label>
@@ -99,7 +99,7 @@
             <b>&nbsp&nbsp</b>
             <input type="submit" name="submit" id="inputSubmit">  <!-- submit -->
             <b>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b>
-            <input type="button" id="download" value="Download all data for this State">
+            <input type="button" id="download" value="Submit selections to download data">
         </fieldset>
     </form>
     <div>
@@ -140,7 +140,7 @@
         </table>
     </div>
     <h5 id="note"></h5>
-    <h5>Results from Data.CDC.gov</h5>
+    <h5>Data from Data.CDC.gov</h5>
     <script src="us.js"></script>
 </body>
 </html>
