--- a/home.html
+++ b/home.html
@@ -21,35 +21,80 @@
 
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
-            <div class="numbertext">1 / 3</div>
+            <div class="numbertext">1 / 4</div>
             <img src="fda-covid19-1600x900.jpg" style="width:100%">
             <div class="text">Caption Text</div>
         </div>
 
         <div class="mySlides fade">
-            <div class="numbertext">2 / 3</div>
-            <img src="cdc-COVIDprevention_airport_bg.png" style="width:100%">
+            <div class="numbertext">2 / 4</div>
+            <img src="time-covid-19-wash-hands-dry-skin_resize.jpg" style="width:100%">
             <div class="text">Caption Two</div>
         </div>
 
         <div class="mySlides fade">
-            <div class="numbertext">3 / 3</div>
-            <img src="wnpr-testing-03-16-2020_ja_1944a_1_.jpg" style="width:100%">
+            <div class="numbertext">3 / 4</div>
+            <img src="wnpr-testing-03-16-2020_ja_1944a_1_resize.jpg" style="width:100%">
             <div class="text">Caption Three</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">4 / 4</div>
+            <img src="cnbc-106494535-1587160437387gettyimages-1210300981_resize.jpeg" style="width:100%">
+            <div class="text">Caption Four</div>
         </div>
 
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
-    <br>
-
     <!-- The dots/circles -->
     <div style="text-align:center">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
     </div>
+    <div class="transmission">
+        <h2>According to the Centers for Disease Control and Prevention
+            <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html">(CDC.gov)</a>
+        </h2>
+        <h4>COVID-19 Transmission</h4>
+        <p>
+            COVID-19 is thought to spread mainly through close contact from person-to-person.
+            People who are in close contact with one another (within about 6 feet)
+            can transmit COVID-19 through respiratory droplets produced when an infected person coughs, sneezes, or talks.
+            These droplets can land in the mouths or noses of people who are nearby or possibly be inhaled into the lungs.
+            COVID-19 may be spread by people who are not showing symptoms. The virus that causes COVID-19 is spreading very 
+            easily and sustainably between people. Information from the ongoing COVID-19 pandemic suggest that this virus is 
+            spreading more efficiently than influenza, but not as efficiently as measles, which is highly contagious.
+        </p>
+        <h4>Symptoms</h4>
+        <p>
+            People with COVID-19 have had a wide range of symptoms reported – ranging from mild symptoms to severe illness.
+            Symptoms may appear 2-14 days after exposure to the virus. People with these symptoms may have COVID-19:
+        </p>
+        <ul>
+            <li>Cough</li>
+            <li>Shortness of breath or difficulty breathing</li>
+            <li>Fever</li>
+            <li>Chills</li>
+            <li>Muscle pain</li>
+            <li>Sore throat</li>
+            <li>New loss of taste or smell</li>
+        </ul>
+        <h4>How to Protect Yourself & Others</h4>
+        <p>
+            There is currently no vaccine to prevent coronavirus disease 2019 (COVID-19), so the
+            best way to prevent illness is to avoid being exposed to this virus. Therefore, everyone should
+            Wash your hands often with soap and water for at least 20 seconds especially after you have
+            been in a public place, or after blowing your nose, coughing, or sneezing. If soap and water are not
+            readily available, use a hand sanitizer that contains at least 60% alcohol. Cover all surfaces of
+            your hands and rub them together until they feel dry. Avoid touching your eyes, nose, and mouth with 
+            unwashed hands.
+        </p>
+    </div>
+    <br>
     <script src="home.js"></script>
 </body>
 </html>
