--- a/us.html
+++ b/us.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <title>CS290 Project</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="us.css" type="text/css">
 </head>
 <body>
@@ -14,7 +15,7 @@
         <a href="home.html">Home</a>
         <a class="active" href="#us">United States</a>
         <a href="world.html">World</a>
-        <a href="resources.html">Additional Resources</a>
+        <a href="resources.html">Resources</a>
     </div>
     <h1>COVID-19 Deaths</h1>
     <h3>Select by demographic</h3>
@@ -139,13 +140,16 @@
                         <td colspan="1">End Week:</td> <!-- add footer -->
                         <td colspan="5" id="end"></td> <!-- add footer -->
             </table>
-            <h5 id="note"></h5>
+            <p id="note" style="font-size:15px"></p>
             <h5>Data from Data.CDC.gov</h5>
         </div>
         <div class="map" style="float:right; margin-right:50px">
             <img src="wikimedia_Blank_US_Map_(states_only).svg" width:"500">
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="us.js"></script>
 </body>
 </html>
