--- a/world.html
+++ b/world.html
@@ -15,6 +15,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/css/mdb.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="world.css" type="text/css">
 </head>
 <body>
@@ -28,13 +29,20 @@
     <h1>COVID-19 Deaths</h1>
     <form>
         <fieldset>
-            <label>Click to display current world results&nbsp&nbsp&nbsp&nbsp&nbsp<input type="submit" name="submit" id="inputSubmit", value="Load"></label> <!-- submit -->
+            <label>Click to display current world results&nbsp&nbsp&nbsp&nbsp&nbsp<input type="submit" name="submit" id="inputSubmit" , value="Load"></label> <!-- submit -->
             <b>&nbsp&nbsp&nbsp&nbsp&nbsp</b>
             <input type="button" id="download" value="Load results first to download">
         </fieldset>
     </form>
-    <canvas id="horizontalBar" style="max-width: 5000px; height: 10000px"></canvas>
-    <div id="Weather"></div>  <!-- div for displaying results -->
+    <div>
+        <br>
+        <img src="wikimedia_BlankMap-World.svg" style="width:1200px">
+        <br>
+        <br>
+        <canvas id="horizontalBar" style="max-width: 5000px; height: 10000px"></canvas>  <!-- for displaying results -->
+        <br>
+        <br>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
