last commit before comments

--- a/home.html
+++ b/home.html
@@ -71,17 +71,17 @@
         </h2>
         <h4>COVID-19 Transmission</h4>
         <p>
-            COVID-19 is thought to spread mainly through close contact from person-to-person.
+            "COVID-19 is thought to spread mainly through close contact from person-to-person.
             People who are in close contact with one another (within about 6 feet)
             can transmit COVID-19 through respiratory droplets produced when an infected person coughs, sneezes, or talks.
             These droplets can land in the mouths or noses of people who are nearby or possibly be inhaled into the lungs.
             COVID-19 may be spread by people who are not showing symptoms. The virus that causes COVID-19 is spreading very
             easily and sustainably between people. Information from the ongoing COVID-19 pandemic suggest that this virus is
-            spreading more efficiently than influenza, but not as efficiently as measles, which is highly contagious.
+            spreading more efficiently than influenza, but not as efficiently as measles, which is highly contagious."
         </p>
         <h4>Symptoms</h4>
         <p>
-            People with COVID-19 have had a wide range of symptoms reported – ranging from mild symptoms to severe illness.
+            "People with COVID-19 have had a wide range of symptoms reported – ranging from mild symptoms to severe illness.
             Symptoms may appear 2-14 days after exposure to the virus. People with these symptoms may have COVID-19:
         </p>
         <ul>
@@ -93,15 +93,29 @@
             <li>Sore throat</li>
             <li>New loss of taste or smell</li>
         </ul>
+        <p>
+            Take your temperature if symptoms develop. Don’t take your temperature within 30 minutes
+            of exercising or after taking medications that could lower your temperature, like acetaminophen."
+        </p>
         <h4>How to Protect Yourself & Others</h4>
         <p>
-            There is currently no vaccine to prevent coronavirus disease 2019 (COVID-19), so the
+            "There is currently no vaccine to prevent coronavirus disease 2019 (COVID-19), so the
             best way to prevent illness is to avoid being exposed to this virus. Therefore, everyone should
             Wash your hands often with soap and water for at least 20 seconds especially after you have
             been in a public place, or after blowing your nose, coughing, or sneezing. If soap and water are not
             readily available, use a hand sanitizer that contains at least 60% alcohol. Cover all surfaces of
             your hands and rub them together until they feel dry. Avoid touching your eyes, nose, and mouth with
             unwashed hands.
+        </p>
+        <p>
+            You could spread COVID-19 to others even if you do not feel sick. Everyone should wear
+            a cloth face cover when they have to go out in public, for example to the grocery store or to pick up
+            other necessities. Cloth face coverings should not be placed on young children under age 2, anyone
+            who has trouble breathing, or is unconscious, incapacitated or otherwise unable to remove the mask
+            without assistance.The cloth face cover is meant to protect other people in case you are infected.
+            Continue to keep about 6 feet between yourself and others. The cloth face cover is not a substitute
+            for social distancing. Clean AND disinfect frequently touched surfaces daily. This includes tables,
+            doorknobs, light switches, countertops, handles, desks, phones, keyboards, toilets, faucets, and sinks."
         </p>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
