--- a/resources.html
+++ b/resources.html
@@ -22,7 +22,7 @@
     <form>
         <fieldset>
             <label>Do you wear a mask while entering public spaces like grocery stores?</label>
-            <label>Yes<input type="checkbox" name="mask" id="mask"></label>
+            <label>&nbsp&nbsp&nbspYes&nbsp&nbsp<input type="checkbox" name="mask" id="mask"></label>
             <br>
             <br>
             <label>How many days a week on average do you enter a public space? <input type="number" name="days" id="days"></label>
@@ -39,19 +39,19 @@
             <br>
             <label>Have you recently experienced any of the following symptoms?</label>
             <br>
-            <label>Cough<input type="radio" name="cough" id="cough"></label>
+            <label>Cough&nbsp&nbsp<input type="radio" name="cough" id="cough"></label>
             <br>
-            <label>Shortness of breath or difficulty breathing<input type="radio" name="breath" id="breath"></label>
+            <label>Shortness of breath or difficulty breathing&nbsp&nbsp<input type="radio" name="breath" id="breath"></label>
             <br>
-            <label>Fever<input type="radio" name="fever" id="fever"></label>
+            <label>Fever&nbsp&nbsp<input type="radio" name="fever" id="fever"></label>
             <br>
-            <label>Chills<input type="radio" name="chills" id="chills"></label>
+            <label>Chills&nbsp&nbsp<input type="radio" name="chills" id="chills"></label>
             <br>
-            <label>Muscle pain<input type="radio" name="pain" id="pain"></label>
+            <label>Muscle pain&nbsp&nbsp<input type="radio" name="pain" id="pain"></label>
             <br>
-            <label>Sore throat<input type="radio" name="sore" id="sore"></label>
+            <label>Sore throat&nbsp&nbsp<input type="radio" name="sore" id="sore"></label>
             <br>
-            <label>New loss of taste of smell<input type="radio" name="smell" id="smell"></label>
+            <label>New loss of taste of smell&nbsp&nbsp<input type="radio" name="smell" id="smell"></label>
             <br>
             <br>
             <label>Enter your email if you would like to receive email updates for your location. <input type="email" name="email" id="email"></label>  <!-- input email -->
