almost last commit

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <a href="world.html">World</a>
         <a href="resources.html">Resources</a>
     </div>
-    <!-- Slideshow carousel -->
+    <!-- slideshow carousel -->
     <div id="carousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carousel" data-slide-to="0" class="active"></li>
