--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
-﻿<!-- CS290 Project -->
+﻿<!-- CS290 Project Homepage-->
 
 <!DOCTYPE html>
 
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>CS290 Project</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="home.css" type="text/css">
+    <meta charset="utf-8" />
+    <title>CS290 Project</title>
+    <!-- Bootstrap stylesheet -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
     <!-- horizontal navigation menu -->
     <div class="navMenu">
-        <a class="active" href="#home">Home</a>
+        <a class="active" href="#index">Home</a>
         <a href="us.html">United States</a>
         <a href="world.html">World</a>
         <a href="resources.html">Resources</a>
     </div>
-    <!-- slideshow carousel -->
+    <!-- Bootstrap slideshow carousel -->
     <div id="carousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carousel" data-slide-to="0" class="active"></li>
@@ -27,6 +28,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
+                <!-- first picture -->
                 <img src="fda-covid19-1600x900.jpg" class="d-block w-100">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Coronavirus Disease 2019 (COVID-19)</h5>
@@ -34,6 +36,7 @@
                 </div>
             </div>
             <div class="carousel-item">
+                <!-- second picture -->
                 <img src="time-covid-19-wash-hands-dry-skin_resize.jpg" class="d-block w-100">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-muted">Wash hands with soap and water</h5>
@@ -41,6 +44,7 @@
                 </div>
             </div>
             <div class="carousel-item">
+                <!-- third picture -->
                 <img src="wnpr-testing-03-16-2020_ja_1944a_1_resize.jpg" class="d-block w-100">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="text-muted">Wear a mask to decrease risk of spreading COVID-19 to others</h5>
@@ -48,6 +52,7 @@
                 </div>
             </div>
             <div class="carousel-item">
+                <!-- fourth picture -->
                 <img src="cnbc-106494535-1587160437387gettyimages-1210300981_resize.jpeg" class="d-block w-100">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Get tested if you have symptoms or have been exposed to a known case of COVID-19</h5>
@@ -55,15 +60,18 @@
                 </div>
             </div>
         </div>
+        <!-- back button -->
         <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
+        <!-- forward button -->
         <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
     </div>
+    <!-- scrollbox with text and link to outside page-->
     <div class="transmission">
         <h2>
             According to the Centers for Disease Control and Prevention
@@ -84,6 +92,7 @@
             "People with COVID-19 have had a wide range of symptoms reported – ranging from mild symptoms to severe illness.
             Symptoms may appear 2-14 days after exposure to the virus. People with these symptoms may have COVID-19:
         </p>
+        <!-- unordered HTML list -->
         <ul>
             <li>Cough</li>
             <li>Shortness of breath or difficulty breathing</li>
@@ -118,9 +127,9 @@
             doorknobs, light switches, countertops, handles, desks, phones, keyboards, toilets, faucets, and sinks."
         </p>
     </div>
+    <!-- Bootstrap and affiliated JQuery and Popper -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="home.js"></script>
 </body>
 </html>
