--- a/resources.html
+++ b/resources.html
@@ -1,4 +1,4 @@
-﻿<!-- CS290 Project -->
+﻿<!-- CS290 Project Subpage3-->
 
 <!DOCTYPE html>
 
@@ -6,19 +6,21 @@
 <head>
     <meta charset="utf-8" />
     <title>CS290 Project</title>
+    <!-- Bootstrap stylesheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="resources.css" type="text/css">
 </head>
 <body>
     <!-- horizontal navigation menu -->
     <div class="navMenu">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="us.html">United States</a>
         <a href="world.html">World</a>
         <a class="active" href="#resources">Resources</a>
     </div>
     <h1>COVID-19 Survey</h1>
     <h3>Please fill out this short survey on your experience during the pandemic</h3>
+    <!-- form that submits via POST -->
     <form>
         <fieldset>
             <label>Do you wear a mask while entering public spaces like grocery stores?</label>
@@ -57,12 +59,14 @@
             <label>Enter your email if you would like to receive email updates for your location. <input type="email" name="email" id="email"></label>  <!-- input email -->
             <br>
             <br>
-            <input type="submit" name="submit" id="inputSubmit">  <!-- submit -->
+            <!-- submit form -->
+            <input type="submit" name="submit" id="inputSubmit">
             <br>
             <br>
             <h4 id="sentPost"></h4>
         </fieldset>
     </form>
+    <!-- scrollbox with text and links to outside pages-->
     <div class="resources">
         <h1>Additional Resources</h1>
         <h3>United States</h3>
@@ -82,6 +86,7 @@
         <br>
         <a href="https://www.mohfw.gov.in/">​Ministry of Health and Family Welfare Government of India (mohfw.gov.in)</a>
     </div>
+    <!-- Bootstrap and affiliated JQuery and Popper -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
