--- a/world.html
+++ b/world.html
@@ -1,4 +1,4 @@
-﻿<!-- CS290 Project -->
+﻿<!-- CS290 Project Subpage2-->
 
 <!DOCTYPE html>
 
@@ -8,12 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>CS290 Project</title>
+    <!-- CSS Fonts -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <!-- Bootstrap core CSS -->
+    <!-- Bootstrap CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="world.css" type="text/css">
@@ -21,7 +21,7 @@
 <body>
     <!-- horizontal navigation menu -->
     <div class="navMenu">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="us.html">United States</a>
         <a class="active" href="#world">World</a>
         <a href="resources.html">Resources</a>
@@ -32,8 +32,10 @@
     <form>
         <fieldset>
             <br>
-            <label><b>&nbsp&nbsp&nbsp&nbsp&nbspClick to display current world results</b>&nbsp&nbsp&nbsp&nbsp&nbsp<input type="submit" name="submit" id="inputSubmit" , value="Load"></label> <!-- submit -->
+            <!-- button to display world results -->
+            <label><b>&nbsp&nbsp&nbsp&nbsp&nbspClick to display current world results</b>&nbsp&nbsp&nbsp&nbsp&nbsp<input type="submit" name="submit" id="inputSubmit" , value="Load"></label>
             <b>&nbsp&nbsp&nbsp&nbsp&nbsp</b>
+            <!-- button to download file -->
             <input type="button" id="download" value="Load results first to download">
             <br>
             <br>
@@ -41,8 +43,10 @@
     </form>
     <div>
         <br>
+        <!-- picture of world map -->
         <img src="wikimedia_BlankMap-World.svg" style="width:1000px">
         <div class="video" style="float:right;">
+            <!-- WHO video -->
             <iframe width="700" height="500" class="border border-secondary"
                     src="https://www.youtube.com/embed/mOV1aBVYKGA">
             </iframe>
@@ -51,10 +55,12 @@
         <figcaption class="figure-caption">https://commons.wikimedia.org/wiki/File:BlankMap-World.svg</figcaption>
         <br>
         <br>
-        <canvas id="horizontalBar" style="max-width: 80%; height: 10000px"></canvas>  <!-- for displaying results -->
+        <!-- graph to display world results -->
+        <canvas id="horizontalBar" style="max-width: 80%; height: 10000px"></canvas>
         <br>
         <br>
     </div>
+    <!-- Bootstrap and affiliated JQuery and Popper -->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
