--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <p>
             "There is currently no vaccine to prevent coronavirus disease 2019 (COVID-19), so the
             best way to prevent illness is to avoid being exposed to this virus. Therefore, everyone should
-            Wash your hands often with soap and water for at least 20 seconds especially after you have
+            wash their hands often with soap and water for at least 20 seconds especially after you have
             been in a public place, or after blowing your nose, coughing, or sneezing. If soap and water are not
             readily available, use a hand sanitizer that contains at least 60% alcohol. Cover all surfaces of
             your hands and rub them together until they feel dry. Avoid touching your eyes, nose, and mouth with
