--- a/world.html
+++ b/world.html
@@ -21,7 +21,7 @@
 <body>
     <!-- horizontal navigation menu -->
     <div class="navMenu">
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="us.html">United States</a>
         <a class="active" href="#world">World</a>
         <a href="resources.html">Resources</a>
