--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <body>
     <!-- horizontal navigation menu -->
     <div class="navMenu">
-        <a class="active" href="#index">Home</a>
+        <a class="active" href="#home">Home</a>
         <a href="us.html">United States</a>
         <a href="world.html">World</a>
         <a href="resources.html">Resources</a>
