--- a/resources.html
+++ b/resources.html
@@ -13,7 +13,7 @@
 <body>
     <!-- horizontal navigation menu -->
     <div class="navMenu">
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <a href="us.html">United States</a>
         <a href="world.html">World</a>
         <a class="active" href="#resources">Resources</a>
