--- a/us.html
+++ b/us.html
@@ -13,7 +13,7 @@
 <body>
     <!-- horizontal navigation menu -->
     <div class="navMenu">
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <a class="active" href="#us">United States</a>
         <a href="world.html">World</a>
         <a href="resources.html">Resources</a>
